--- a/public/Book_Search.html
+++ b/public/Book_Search.html
@@ -24,6 +24,7 @@
                 position: fixed; /* Bar does not move with page */
                 overflow: auto;
                 background-color: #000000;
+                font-family: Georgia, 'Times New Roman', Times, serif;
 
             }
 
@@ -83,37 +84,37 @@
             }
 
             /*Creating container for content*/
-        .container {
+            .container {
             margin-left: 200px;
             padding-left: 30px;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100%;
-        }
+            }
 
-        .box {
-          text-align: left;
-          padding: 20px;
-        }
+            .box {
+            text-align: left;
+            padding: 20px;
+            }
 
-        body {
-            font-family: Georgia, 'Times New Roman', Times, serif;
-        }
+            body {
+                font-family: Georgia, 'Times New Roman', Times, serif;
+            }
 
-        /* Add style to the footer*/
-        footer {
-            background-color: black;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            margin-left: 200px;
-            position: absolute;
-            left: 0;
-            bottom: 0;     
-            width: 100%;
-            height: 60px;
-        }
+            /* Add style to the footer*/
+            footer {
+                background-color: black;
+                color: white;
+                padding: 10px;
+                text-align: center;
+                margin-left: 200px;
+                position: absolute;
+                left: 0;
+                bottom: 0;     
+                width: 100%;
+                height: 60px;
+            }
 
         </style>
 
@@ -152,7 +153,7 @@
 
         <!-- Content -->
         <div class = "content">
-            <h1 style="text-align:center"> Milestone 1 </h1>
+            <h1 style="text-align:center"> Book Search </h1>
         </div>
         <!-- End Content -->
 
