--- a/public/Bookshelf.html
+++ b/public/Bookshelf.html
@@ -120,7 +120,7 @@
     </head>
 
     <body>
-        
+
         <!-- Navigation Bar -->
         <div class = "sidenav"> 
             <a href="index.html"> Home </a>
@@ -152,7 +152,7 @@
 
         <!-- Content -->
         <div class = "content">
-            <h1 style="text-align:center"> Milestone 1 </h1>
+            <h1 style="text-align:center"> Bookshelf </h1>
         </div>
         <!-- End Content -->
 
