--- a/public/Book_Search.html
+++ b/public/Book_Search.html
@@ -6,7 +6,7 @@
         <meta name="theme-color" content="#000000"/>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="icon" type="image/png" href="favicon.png"/>
-        <link rel="stylesheet" href="/src/index.css">
+        <link rel="stylesheet" href="/src/style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
@@ -156,7 +156,7 @@
         <!-- Content -->
         <div class = "content">
             <div class = "container">
-                <h1 id="title" class="text-center mt-5"> Book Search </h1>
+                <h1 class="text-center mt-5"> Book Search </h1>
                 <div class="row">
                     <div id="input" class="input-group mx-auto col-lg-6 col-md-8 col-sm-12">
                         <input id="search-box" type="text" class="form-control" placeholder="Search Books...">
@@ -169,7 +169,7 @@
                 <h2 class="text-center"> Search Results </h2>
                 <div id="list-output">
                     <div class="row">
-                        
+
                     </div>
                 </div>
             </div>
