--- a/public/Bookshelf.html
+++ b/public/Bookshelf.html
@@ -78,6 +78,7 @@
             .content {
                 margin-left: 200px;
                 padding-left: 30px;
+                padding-bottom: 50px;
             }
 
             body {
